--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,10 +12,19 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
-/* body {
+body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 } */
+
+@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+* {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
+}
