--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,23 @@ body {
 @import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 * {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: monospace, Arial, Helvetica, sans-serif;
   background-color: black;
   color: white;
+}
+
+button {
+  border-width: 2px;
+  border-style: solid;
+}
+
+input {
+  border-width: 2px;
+  border-style: solid;
+  margin: 0.5rem 0;
+}
+
+input:focus {
+  outline: none;
+  border-color: gray;
 }
